<resources>
    <string name="app_name">ChatyChaty</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account"><u>Already have account?</u></string>
    <string name="sign_in">Sign In</string>
    <string name="create_account"><u>Create account</u></string>
    <string name="type_a_message">Type a message</string>
    <string name="send">Send</string>
    <string name="user_image">User image</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="chats">Chats</string>
    <string name="share_with">Share with</string>
    <string name="empty_messages">No messages, try sending a message.</string>
    <string name="empty_chats">No chats, try starting a chat with someone.</string>
    <string name="empty_archive_chats">No archived chats.</string>
    <string name="chat">Chat</string>
    <string name="type_username">Type a username</string>
    <string name="search_chats">Search chats</string>
    <string name="name_error">Name can\'t be empty</string>
    <string name="username_error">Username can\'t be empty</string>
    <string name="password_error">Password must be at least 6 characters and must have at least one digit</string>
    <string name="password_error_empty">Password can\'t be empty</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="follow_system_theme">System default</string>
    <string name="delivered">Delivered</string>
    <string name="delete_chat">Delete chat</string>
    <string name="archived_chats">Archived chats</string>
    <string name="delete_account">Delete account</string>
    <string name="change_chat_color">Change chat color</string>
    <string name="search_messages">Search messages</string>
    <string name="invite_others">Invite others</string>
    <string name="archive_chat">Archive chat</string>
    <string name="unarchive_chat">Unarchive chat</string>
    <string name="change_password">Change password</string>
    <string name="block_user">Block user</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="forward">Forward</string>
    <string name="share">Share</string>
    <string name="mute">Mute chat</string>
    <string name="unmute">Unmute chat </string>
    <string name="pin">Pin chat</string>
    <string name="chat_is_pinned">Chat has been pinned</string>
    <string name="chat_is_unpinned">Chat has been unpinned</string>
    <string name="unpin">Unpin chat</string>
    <string name="mark_read">Mark read</string>
    <string name="change_theme">Change theme</string>
    <string name="change_name">Change name</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="feedback">Feedback</string>
    <string name="submit">Submit</string>
    <string name="sign_out_desc">Are you sure you want to sign out?</string>
    <string name="delete_account_desc">Are you sure you want to delete your account?</string>
    <string name="action_can_be_undone">Note: this action can not be undone!</string>
    <string name="permission_required">Storage permission is required</string>
    <string name="permission_required_desc">Please give permission to the app to choose image from gallery!</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="app_required">Gallery is app required</string>
    <string name="app_required_desc">Gallery app is required to choose image</string>
    <string name="ok">Ok</string>
    <string name="name_empty">Name can\'t be empty!</string>
    <string name="permission_not_granted">Storage Permission is required</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="search_chat">Search chat</string>
    <string name="search_message">Search message</string>
    <string name="no_such_user">No such user</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="share_to">Share to</string>
    <string name="invite_text">Join me on ChatyChaty</string>
    <string name="chat_is_archived">Chat has been archived!</string>
    <string name="undo">Undo</string>
    <string name="chat_is_unarchived">Chat has been unarchived!</string>
    <string name="chat_is_unmuted">Chat has been unmuted!</string>
    <string name="chat_is_muted">Chat has been muted!</string>
    <string name="reply">Reply</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="no_messages">No messages</string>
    <string name="message_status">Message status</string>
</resources>
