<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/ll"
        style="@style/Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/v_head"
            style="@style/HeadView"
            android:layout_width="25dp"
            android:layout_height="3dp"
            android:layout_margin="@dimen/spacing_normal" />

        <TextView
            android:id="@+id/tv_view_profile"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/ic_round_account_info_24"
            tools:text="View Profile" />

        <TextView
            android:id="@+id/tv_change_color"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_chat_color"
            app:drawableStartCompat="@drawable/ic_round_palette_24" />

        <TextView
            android:id="@+id/tv_archive_chat"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/archive_chat"
            app:drawableStartCompat="@drawable/ic_round_archive_24" />

        <TextView
            android:id="@+id/tv_mute"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mute"
            app:drawableStartCompat="@drawable/ic_round_volume_off_24" />

        <TextView
            android:id="@+id/tv_pin"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin"
            app:drawableStartCompat="@drawable/ic_round_pin_24" />

        <TextView
            android:id="@+id/tv_delete_chat"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_chat"
            app:drawableStartCompat="@drawable/ic_round_delete_24" />

    </LinearLayout>
</layout>