<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/shape_dialog"
        android:orientation="vertical">

        <View
            android:id="@+id/v_head"
            android:layout_width="25dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/spacing_normal"
            android:background="@drawable/shape_view_head" />

        <TextView
            android:id="@+id/tv_settings"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_settings_24"
            android:text="@string/settings" />

        <TextView
            android:id="@+id/tv_archived_chats"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_inventory_24"
            android:text="@string/archived_chats" />

        <TextView
            android:id="@+id/tv_theme"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_brightness_medium_24"
            android:text="@string/change_theme" />

        <TextView
            android:id="@+id/tv_invite_others"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_invite_people"
            android:text="@string/invite_others" />

    </LinearLayout>
</layout>