<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/ll"
        style="@style/Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/v_head"
            style="@style/HeadView"
            android:layout_width="25dp"
            android:layout_height="3dp"
            android:layout_margin="@dimen/spacing_normal" />

        <RadioGroup
            android:id="@+id/rg_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_system_default"
                style="@style/DialogThemeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:checked="true"
                android:text="@string/follow_system_theme" />

            <RadioButton
                android:id="@+id/rb_light_theme"
                style="@style/DialogThemeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:text="@string/light_theme" />

            <RadioButton
                android:id="@+id/rb_dark_theme"
                style="@style/DialogThemeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:text="@string/dark_theme" />

        </RadioGroup>
    </LinearLayout>
</layout>