<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/shape_dialog"
        android:orientation="vertical">

        <View
            android:id="@+id/v_head"
            android:layout_width="25dp"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/spacing_normal"
            android:background="@drawable/shape_view_head" />

        <TextView
            android:id="@+id/tv_view_profile"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_account_info_24"
            tools:text="View profile" />

        <TextView
            android:id="@+id/tv_change_color"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_palette_24"
            android:text="@string/change_chat_color" />

        <TextView
            android:id="@+id/tv_search_messages"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_search_24"
            android:text="@string/search_messages" />

        <TextView
            android:id="@+id/tv_delete_chat"
            style="@style/DialogItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_round_delete_24"
            android:text="@string/delete_chat" />

    </LinearLayout>
</layout>