<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.chatychaty.app.user.UserViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cool"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".note.ui.NotebookFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground">

            <Toolbar
                android:id="@+id/tb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:navigationIcon="@drawable/ic_arrow_back_black_24dp">

                <TextView
                    android:id="@+id/tb_tv"
                    style="@style/TextAppearance.Toolbar.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/profile"
                    android:textColor="@color/colorAccent" />
            </Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/spacing_normal"
                android:background="@color/colorSurface"
                app:imageUrl="@{viewModel.user.imgUrl}"
                app:layout_collapseMode="pin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ImageViewShapeAppearance"
                tools:src="@drawable/ic_person_24dp" />


            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:background="@android:color/transparent"
                android:enabled="false"
                android:hint="@string/name"
                android:maxLength="32"
                android:text="@{viewModel.user.name}"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img"
                tools:text="Ali Albaali" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:maxLength="32"
                android:text="@{viewModel.user.username}"
                android:textColor="@color/colorOnPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img"
                tools:text="\@chatychaty" />

            <ScrollView
                android:id="@+id/sv"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/spacing_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img">

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_block_user"
                        style="@style/DialogItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/account_cancel_outline"
                        android:text="@string/block_user" />

                    <TextView
                        android:id="@+id/tv_change_color"
                        style="@style/DialogItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/palette"
                        android:text="@string/change_chat_color" />

                    <RadioButton
                        android:id="@+id/tv_archive_chat"
                        style="@style/DialogItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableStart="@drawable/archive_arrow_down_outline"
                        android:text="@string/archive_chat" />

                    <RadioButton
                        android:id="@+id/tv_mute"
                        style="@style/DialogItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableStart="@drawable/volume_off"
                        android:text="@string/mute" />

                    <RadioButton
                        android:id="@+id/tv_pin"
                        style="@style/DialogItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableStart="@drawable/pin_outline"
                        android:text="@string/pin" />

                    <TextView
                        android:id="@+id/tv_delete_chat"
                        style="@style/DialogItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_delete_black_24dp"
                        android:text="@string/delete_chat" />

                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
